--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "parcel ./src/index.html --port 4000",
+    "start": "parcel ./src/index.html --port 4000 --no-cache",
     "build": "parcel build ./src/index.html"
   },
   "keywords": [],
@@ -12,16 +12,12 @@
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/plugin-proposal-decorators": "^7.15.4",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-typescript": "^7.15.0",
     "@parcel/transformer-sass": "^2.0.0-rc.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
-    "parcel": "^2.0.0-rc.0",
-    "sass": "^1.42.1",
+    "parcel": "^2.0.0-nightly.867",
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.6.0"
+    "reflect-metadata": "^0.1.13"
   }
 }
