--- a/framework/munster-core/package.json
+++ b/framework/munster-core/package.json
@@ -1,14 +1,26 @@
 {
   "name": "munster-core",
-  "version": "0.0.0",
+  "version": "0.0.22",
   "description": "",
-  "main": "index.ts",
-  "scripts": {},
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "scripts": {
+    "build": "parcel build ./src/index.ts",
+    "major": "npm version major",
+    "minor": "npm version minor",
+    "patch": "npm version patch",
+    "patch-release": "npm run build && npm run patch && npm publish"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^16.10.3",
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-proposal-decorators": "^7.15.8",
+    "@parcel/packager-ts": "2.0.0-nightly.869",
+    "@parcel/transformer-typescript-types": "2.0.0-nightly.869",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "parcel": "^2.0.0-nightly.867",
     "typescript": "^4.4.3"
   },
   "dependencies": {
