--- a/framework/munster-router/package.json
+++ b/framework/munster-router/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@types/node": "^16.10.3",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "reflect-metadata": "^0.1.13"
   }
 }
