--- a/app/package.json
+++ b/app/package.json
@@ -12,12 +12,15 @@
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/plugin-proposal-decorators": "^7.15.4",
+    "@munster/transformer": "^0.0.2",
     "@parcel/transformer-sass": "^2.0.0-rc.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "parcel": "^2.0.0-nightly.867",
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@munster/core": "^0.0.77",
+    "@munster/router": "^0.0.74",
     "reflect-metadata": "^0.1.13"
   }
 }
