--- a/framework/munster-cli/package.json
+++ b/framework/munster-cli/package.json
@@ -1,18 +1,27 @@
 {
-  "name": "munster-cli",
+  "name": "@munster/cli",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "preferGlobal": true,
   "bin": {
-    "mc": "./index.js"
+    "mc": "./lib/index.js"
   },
-  "scripts": {},
+  "scripts": {
+    "build": "parcel build ./src/index.ts && node ./shebang-script.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
-    "commander": "^8.2.0"
+    "commander": "^8.2.0",
+    "fs": "^0.0.1-security",
+    "parcel-plugin-shebang": "^1.3.3",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "parcel": "^2.0.0-nightly.873",
+    "typescript": "^4.4.3"
   }
 }
