--- a/framework/munster-core/package.json
+++ b/framework/munster-core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "munster-core",
-  "version": "0.0.22",
+  "name": "@munster/core",
+  "version": "0.0.77",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -9,7 +9,7 @@
     "major": "npm version major",
     "minor": "npm version minor",
     "patch": "npm version patch",
-    "patch-release": "npm run build && npm run patch && npm publish"
+    "patch-release": "rm -rfv ./lib/* && npm run build && npm run patch && npm publish"
   },
   "keywords": [],
   "author": "",
