--- a/framework/munster-router/package.json
+++ b/framework/munster-router/package.json
@@ -1,17 +1,29 @@
 {
-  "name": "munster-router",
-  "version": "0.0.0",
+  "name": "@munster/router",
+  "version": "0.0.74",
   "description": "",
-  "main": "index.ts",
-  "scripts": {},
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
+  "scripts": {
+    "build": "parcel build ./src/index.ts",
+    "dev-link": "npm link munster-core",
+    "patch": "npm version patch",
+    "patch-release": "rm -rfv ./lib/* && npm run build && npm run patch && npm publish"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^16.10.3",
+    "@babel/plugin-proposal-decorators": "^7.15.8",
+    "@parcel/packager-ts": "2.0.0-nightly.875",
+    "@parcel/transformer-typescript-types": "2.0.0-nightly.875",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "parcel": "^2.0.0-nightly.873",
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@munster/core": "^0.0.77",
+    "path": "^0.12.7",
     "reflect-metadata": "^0.1.13"
   }
 }
