--- a/munster-cli/package.json
+++ b/munster-cli/package.json
@@ -2,26 +2,23 @@
   "name": "@munster/cli",
   "version": "0.0.0",
   "description": "",
-  "main": "./lib/index.js",
+  "main": "./src/index.js",
   "preferGlobal": true,
   "bin": {
-    "mc": "./lib/index.js"
+    "mc": "./src/index.js"
   },
-  "scripts": {
-    "build": "parcel build ./src/index.ts && node ./shebang-script.js"
-  },
+  "scripts": { },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
+    "child_process": "^1.0.2",
     "commander": "^8.2.0",
     "fs": "^0.0.1-security",
-    "parcel-plugin-shebang": "^1.3.3",
+    "listr": "^0.14.3",
+    "ncp": "^2.0.0",
     "path": "^0.12.7"
   },
-  "devDependencies": {
-    "parcel": "^2.0.0-nightly.873",
-    "typescript": "^4.4.3"
-  }
+  "devDependencies": {}
 }
