--- a/munster-router/package.json
+++ b/munster-router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@munster/router",
-  "version": "0.0.104",
+  "version": "0.0.113",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -21,7 +21,7 @@
     "parcel": "^2.0.0-nightly.873",
     "typescript": "^4.4.3"
   },
-  "dependencies": {
-    "@munster/core": "^0.0.94"
+  "peerDependencies": {
+    "@munster/core": "^0.0.96"
   }
 }
