--- a/munster-di/package.json
+++ b/munster-di/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@munster/di",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "main": "lib/index.js",
   "license": "MIT",
   "scripts": {
-    "build": "ts-node ./src/index.ts",
+    "build": "tsc -p .",
     "patch": "npm version patch",
     "patch-release": "rm -rfv ./lib/* && npm run build && npm run patch && npm publish"
   },
@@ -12,7 +12,6 @@
     "access": "public"
   },
   "devDependencies": {
-    "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {
